# smolpc-blenderhelper

./: .gitignore  GETTING_STARTED.md  INSTALL.md  PROJECT_DOCUMENTATION.md  README.md  claude.md  package-lock.json  package.json  start_server.bat  start_server.sh  svelte.config.js  tsconfig.json
.claude/: settings.local.json
Docs/: SHARED_ENGINE_ONBOARDING_PLAN.md
blender_addon/: blender_helper.py  blender_helper_http.py
models/: README.md
rag_system/: build_database.py  server.py
src/: App.svelte  app.css  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: blender_bridge.rs  logger.rs  main.rs  ollama.rs  prompts.rs  python_checker.rs  scene_bridge.rs  server_manager.rs  state.rs
src-tauri/src/commands/: assistant.rs  generation.rs  inference.rs  mod.rs
src-tauri/src/inference/: onnx.rs
src-tauri/src/models/: loader.rs  mod.rs  registry.rs  runtime_spec.rs
src-tauri/src/rag/: retriever.rs
tiers_plan/: PROBLEMS.md  README.md  TIER_1_STREAMING_AND_CANCELLATION.md  TIER_2_RUST_ORCHESTRATION_AND_RAG_PORT.md  TIER_3_ONNX_RUNTIME_MIGRATION.md
