[package]
name = "blender_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "config-toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
open = "5"


[build-dependencies]
tauri-build = { version = "2", features = [] }
