[package]
name = "blender_helper"
version = "6.0.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "config-toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
axum = "0.8"
serde-pickle = "1.2"
tokenizers = "0.20"


[build-dependencies]
tauri-build = { version = "2", features = [] }
